// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime renders 1`] = `
<time
  datetime="2019-12-01"
>
  So 01.12.2019
</time>
`;

exports[`DateTime renders 2`] = `
<time
  datetime="2033-01-01"
>
  Sa 01.01.2033
</time>
`;
